fix: LLM_テーマスコアリングで両ルートのspots_summaryを参照
## 問題
- ナレッジルートでは CODE_ナレッジスポット抽出 (1768700000030) の出力を使用
- HTTPルートでは CODE_実在スポット検索パース (1768601299799) の出力を使用
- LLM_テーマスコアリングが片方しか参照していなかったためエラー

## 解決
プロンプトで両方の変数を参照するように変更:
- 【スポット候補（HTTPルート）】{{#1768601299799.spots_summary#}}
- 【スポット候補（ナレッジルート）】{{#1768700000030.spots_summary#}}

どちらかのルートでは空になるが、Difyは存在しない変数を空文字として扱う

--- a/apps/city-trail-lp/dify/workflow_20260118_0336.yml
+++ b/apps/city-trail-lp/dify/workflow_20260118_0336.yml
@@ -1120,7 +1120,8 @@ workflow:
           role: user
           text: "【プレイヤーの役割】\n{{#1768599287614.player_role#}}\n\n【体験の約束】\n{{#1768599287614.experience_promise#}}\n\
             \n【雰囲気】\n{{#1768599287614.atmosphere_tone#}}\n\n【テーマ】\n{{#1768599287614.primary_themes#}}\n\
-            \n【エリア情報】\n{{#1768599416646.text#}}\n\n【スポット候補】\n{{#1768601299799.spots_summary#}}\n\
+            \n【エリア情報】\n{{#1768599416646.text#}}\n\n【スポット候補（HTTPルート）】\n{{#1768601299799.spots_summary#}}\n\
+            \n【スポット候補（ナレッジルート）】\n{{#1768700000030.spots_summary#}}\n\
             \n【必要なスポット数】\n{{#1768558472266.spot_count#}}件\n\n\n【スコアリング基準（各0-100点）】\n\
             \n1. observation_material（観察素材）\n   現地で見て発見できるものがあるか？\n   - 紋章/刻印/銘板/碑文\n\
             \   - 数えられるもの（柱/石段/灯籠）\n   - 方角/配置/形状の特徴\n   - 100点＝見るべき具体的ディテールが複数ある\n\
