--- a/apps/city-trail-lp/dify/workflow_20260118_0336.yml
+++ b/apps/city-trail-lp/dify/workflow_20260118_0336.yml
@@ -389,6 +389,39 @@ workflow:
       targetHandle: target
       type: custom
       zIndex: 0
+    - data:
+        isInLoop: false
+        sourceType: llm
+        targetType: variable-aggregator
+      id: 1768599416646-source-1768683506630-target
+      source: '1768599416646'
+      sourceHandle: source
+      target: '1768683506630'
+      targetHandle: target
+      type: custom
+      zIndex: 0
+    - data:
+        isInLoop: false
+        sourceType: code
+        targetType: variable-aggregator
+      id: 1768700000030-source-1768683506630-target
+      source: '1768700000030'
+      sourceHandle: source
+      target: '1768683506630'
+      targetHandle: target
+      type: custom
+      zIndex: 0
+    - data:
+        isInLoop: false
+        sourceType: variable-aggregator
+        targetType: llm
+      id: 1768683506630-source-1768601846740-target
+      source: '1768683506630'
+      sourceHandle: source
+      target: '1768601846740'
+      targetHandle: target
+      type: custom
+      zIndex: 0
     nodes:
     - data:
         selected: false
@@ -828,54 +861,12 @@ workflow:
       type: custom
       width: 242
     - data:
-        code: "import json\nimport re\n\ndef main(knowledge_result) -> dict:\n   \
-          \ \"\"\"\n    ナレッジ検索結果からスポット情報を抽出し、\n    CODE_実在スポット検索パースと同じ形式で出力する\n  \
-          \  \n    期待形式: セミコロン区切りのkey-value形式\n    例: spot_name: 椎木講堂;zone: センター;lat:\
-          \ 33.5934;lng: 130.2228;...\n    \"\"\"\n    spots = []\n    lines = []\n\
-          \    \n    # 入力がリストの場合（Difyのナレッジ検索結果）\n    if isinstance(knowledge_result,\
-          \ list):\n        for item in knowledge_result:\n            if isinstance(item,\
-          \ dict):\n                # チャンクのcontentを取得\n                content = item.get('content',\
-          \ item.get('text', str(item)))\n                lines.append(content)\n\
-          \            else:\n                lines.append(str(item))\n    else:\n\
-          \        # 文字列の場合は改行で分割\n        lines = str(knowledge_result).strip().split('\\\
-          n')\n    \n    for i, line in enumerate(lines):\n        if not line or\
-          \ not str(line).strip():\n            continue\n        \n        line =\
-          \ str(line).strip()\n        \n        # セミコロン区切りのkey-value形式をパース\n    \
-          \    data = {}\n        # セミコロンで分割（ただしURL内のセミコロンは保持）\n        parts = re.split(r';(?=\\\
-          w+:)', line)\n        \n        for part in parts:\n            if ':' in\
-          \ part:\n                # 最初のコロンで分割（URL内のコロンは保持）\n                key,\
-          \ value = part.split(':', 1)\n                data[key.strip().lower()]\
-          \ = value.strip()\n        \n        # 必要なフィールドがあればスポットとして追加\n        if\
-          \ 'spot_name' in data or 'name' in data:\n            try:\n           \
-          \     name = data.get('spot_name', data.get('name', ''))\n             \
-          \   lat_str = data.get('lat', '33.5955')\n                lng_str = data.get('lng',\
-          \ '130.2186')\n                \n                spot = {\n            \
-          \        'spot_id': f'S{len(spots) + 1}',\n                    'name': name,\n\
-          \                    'lat': float(lat_str) if lat_str else 33.5955,\n  \
-          \                  'lng': float(lng_str) if lng_str else 130.2186,\n   \
-          \                 'place_id': '',\n                    'rating': 4.0,\n\
-          \                    'reviews': 0,\n                    'types': data.get('category',\
-          \ 'point_of_interest'),\n                    'address': f\"九州大学伊都キャンパス {data.get('zone',\
-          \ '')}\",\n                    'google_maps_url': data.get('google_map_url',\
-          \ data.get('google_maps_url', f'https://www.google.com/maps/search/?api=1&query={lat_str},{lng_str}')),\n\
-          \                    'observable_elements': data.get('observable_elements',\
-          \ ''),\n                    'puzzle_potential': data.get('puzzle_potential',\
-          \ ''),\n                    'trivia': data.get('trivia', ''),\n        \
-          \            'history': data.get('history', ''),\n                    'difficulty':\
-          \ data.get('difficulty', 'medium')\n                }\n                spots.append(spot)\n\
-          \            except (ValueError, KeyError) as e:\n                continue\n\
-          \    \n    # スポットサマリーを生成\n    spots_summary = ''\n    for s in spots:\n\
-          \        spots_summary += f\"{s['spot_id']}: {s['name']}\\n\"\n        spots_summary\
-          \ += f\"  住所: {s['address']}\\n\"\n        spots_summary += f\"  座標: {s['lat']},\
-          \ {s['lng']}\\n\"\n        if s.get('observable_elements'):\n          \
-          \  spots_summary += f\"  観察要素: {s['observable_elements']}\\n\"\n       \
-          \ if s.get('trivia'):\n            spots_summary += f\"  豆知識: {s['trivia']}\\\
-          n\"\n        spots_summary += '\\n'\n    \n    return {\n        'spots_json':\
-          \ json.dumps(spots, ensure_ascii=False),\n        'spots_count': len(spots),\n\
-          \        'spots_summary': spots_summary,\n        'source': 'knowledge_base'\n\
-          \    }\n"
+        code: "import json\nimport re\n\ndef main(knowledge_result) -> dict:\n    \"\"\"\n    ナレッジ検索結果からスポット情報を抽出し、\n    CODE_実在スポット検索パースと同じ形式で出力する\n    \n    期待形式: セミコロン区切りのkey-value形式\n    例: spot_name: 椎木講堂;zone: センター;lat: 33.5934;lng: 130.2228;...\n    \"\"\"\n    spots = []\n    lines = []\n    \n    # 入力がリストの場合（Difyのナレッジ検索結果）\n    if isinstance(knowledge_result, list):\n        for item in knowledge_result:\n            if isinstance(item, dict):\n                content = item.get('content', item.get('text', str(item)))\n                lines.append(content)\n            else:\n                lines.append(str(item))\n    else:\n        lines = str(knowledge_result).strip().split('\\n')\n    \n    for i, line in enumerate(lines):\n        if not line or not str(line).strip():\n            continue\n        \n        line = str(line).strip()\n        data = {}\n        parts = re.split(r';(?=\\w+:)', line)\n        \n        for part in parts:\n            if ':' in part:\n                key, value = part.split(':', 1)\n                data[key.strip().lower()] = value.strip()\n        \n        if 'spot_name' in data or 'name' in data:\n            try:\n                name = data.get('spot_name', data.get('name', ''))\n                lat_str = data.get('lat', '33.5955')\n                lng_str = data.get('lng', '130.2186')\n                \n                spot = {\n                    'spot_id': f'S{len(spots) + 1}',\n                    'name': name,\n                    'lat': float(lat_str) if lat_str else 33.5955,\n                    'lng': float(lng_str) if lng_str else 130.2186,\n                    'place_id': '',\n                    'rating': 4.0,\n                    'reviews': 0,\n                    'types': data.get('category', 'point_of_interest'),\n                    'address': f\"九州大学伊都キャンパス {data.get('zone', '')}\",\n                    'google_maps_url': data.get('google_map_url', data.get('google_maps_url', f'https://www.google.com/maps/search/?api=1&query={lat_str},{lng_str}')),\n                    'observable_elements': data.get('observable_elements', ''),\n                    'puzzle_potential': data.get('puzzle_potential', ''),\n                    'trivia': data.get('trivia', ''),\n                    'history': data.get('history', ''),\n                    'difficulty': data.get('difficulty', 'medium')\n                }\n                spots.append(spot)\n            except (ValueError, KeyError) as e:\n                continue\n    \n    spots_summary = ''\n    for s in spots:\n        spots_summary += f\"{s['spot_id']}: {s['name']}\\n\"\n        spots_summary += f\"  住所: {s['address']}\\n\"\n        spots_summary += f\"  座標: {s['lat']}, {s['lng']}\\n\"\n        if s.get('observable_elements'):\n            spots_summary += f\"  観察要素: {s['observable_elements']}\\n\"\n        if s.get('trivia'):\n            spots_summary += f\"  豆知識: {s['trivia']}\\n\"\n        spots_summary += '\\n'\n    \n    # 伊都キャンパス固定のエリア情報\n    area_info = '''【エリア名】九州大学伊都キャンパス\n【所在地】福岡県福岡市西区元岡744\n【特徴】\n- 日本最大級の大学キャンパス（約272ヘクタール）\n- 2005年から箱崎キャンパスから移転開始\n- センターゾーン、ウエストゾーン、イーストゾーンに分かれる\n- 自然豊かな環境と最新の研究施設が共存\n【見どころ】\n- 中央図書館: 蔵書数約400万冊\n- 椎木講堂: 最大3000人収容、上空から見ると亀の形\n- ビッグオレンジ: 学生の情報発信拠点\n- 伊都の森: 自然保護区域\n【雰囲気】\n- 広大で開放的\n- アカデミックな雰囲気\n- 季節ごとに変わる自然の風景'''\n    \n    return {\n        'spots_json': json.dumps(spots, ensure_ascii=False),\n        'spots_count': len(spots),\n        'spots_summary': spots_summary,\n        'area_info': area_info,\n        'source': 'knowledge_base'\n    }\n"
         code_language: python3
         outputs:
+          area_info:
+            children: null
+            type: string
           source:
             children: null
             type: string
@@ -1169,7 +1160,7 @@ workflow:
           role: user
           text: "【プレイヤーの役割】\n{{#1768599287614.player_role#}}\n\n【体験の約束】\n{{#1768599287614.experience_promise#}}\n\
             \n【雰囲気】\n{{#1768599287614.atmosphere_tone#}}\n\n【テーマ】\n{{#1768599287614.primary_themes#}}\n\
-            \n【エリア情報】\n{{#1768599416646.text#}}\n\n【スポット候補】\n{{#1768683506629.output#}}\n\n【必要なスポット数】\n\
+            \n【エリア情報】\n{{#1768683506630.output#}}\n\n【スポット候補】\n{{#1768683506629.output#}}\n\n【必要なスポット数】\n\
             {{#1768558472266.spot_count#}}件\n\n\n【スコアリング基準（各0-100点）】\n\n1. observation_material（観察素材）\n\
             \   現地で見て発見できるものがあるか？\n   - 紋章/刻印/銘板/碑文\n   - 数えられるもの（柱/石段/灯籠）\n   - 方角/配置/形状の特徴\n\
             \   - 100点＝見るべき具体的ディテールが複数ある\n\n2. heads_up_potential（ヘッズアップ度）\n   スマホを見ずに楽しめるか？\n\
@@ -1441,7 +1432,7 @@ workflow:
           role: user
           text: "【プレイヤーの役割】\n{{#1768599287614.player_role#}}\n\n【体験の約束】\n{{#1768599287614.experience_promise#}}\n\
             \n【雰囲気】\n{{#1768599287614.atmosphere_tone#}}\n\n【物語の導入フック】\n{{#1768599287614.story_hook#}}\n\
-            \n【テーマ】\n{{#1768599287614.primary_themes#}}\n\n【エリア情報】\n{{#1768599416646.text#}}\n\
+            \n【テーマ】\n{{#1768599287614.primary_themes#}}\n\n【エリア情報】\n{{#1768683506630.output#}}\n\
             \n【最適化されたスポット一覧】\n{{#1768602131448.optimized_spots_text#}}\n\n\n【各スポットに割り当てる物語役割（story_anchor）】\n\
             必ず1つだけ選ぶこと。\n\n- hook: 事件発生/依頼受諾（必ず最初のスポット）\n- evidence: 証拠が見つかる場所\n-\
             \ witness: 目撃者/証言がいた場所\n- cipher: 暗号/符号が隠された場所\n- memory: 記憶が揺れる/過去が蘇る場所\n\
@@ -1592,7 +1583,7 @@ workflow:
           text: "【プレイヤーの役割】\n{{#1768599287614.player_role#}}\n\n【体験の約束】\n{{#1768599287614.experience_promise#}}\n\
             \n【雰囲気】\n{{#1768599287614.atmosphere_tone#}}\n\n【テーマ】\n{{#1768599287614.primary_themes#}}\n\
             \n【スポットとモチーフ】\n{{#1768602505042.motifs_text#}}\n\n【事件/謎の構造】\n{{#1768602505042.overall_narrative#}}\n\
-            \n【エリアの歴史】\n{{#1768599416646.text#}}\n\n\n【premise（前提説明）の必須ルール】\n- 300〜500字、3〜4段落\n\
+            \n【エリアの歴史】\n{{#1768683506630.output#}}\n\n\n【premise（前提説明）の必須ルール】\n- 300〜500字、3〜4段落\n\
             - 二人称（あなた）中心、現在形\n- 最後の1文は問いかけで締める\n- ネタバレ禁止（答え、犯人、どんでん返しは書かない）\n- 歴史的事実から逸脱しない\n\
             \n【premiseに必ず含める8要素】\n1. 雰囲気の一撃目（映画のオープニング感）\n2. プレイヤーの役割（なりきり）\n3. 舞台の描写（具体的な場所）\n\
             4. 事件・異変（導入フック）\n5. 痕跡（シンボル/暗号/伝承/手がかり）\n6. 賭け金（タイムリミット/危機/失敗示唆）\n7. 体験の約束（ただの散歩ではない）\n\
@@ -2361,6 +2352,29 @@ workflow:
       positionAbsolute:
         x: 3780.4709253679553
         y: 870.1287196084256
+      selected: false
+      sourcePosition: right
+      targetPosition: left
+      type: custom
+      width: 242
+    - data:
+        output_type: string
+        selected: false
+        title: 変数集約器_エリア情報
+        type: variable-aggregator
+        variables:
+        - - '1768599416646'
+          - text
+        - - '1768700000030'
+          - area_info
+      height: 106
+      id: '1768683506630'
+      position:
+        x: 3780.4709253679553
+        y: 1000
+      positionAbsolute:
+        x: 3780.4709253679553
+        y: 1000
       selected: false
       sourcePosition: right
       targetPosition: left
