--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -8,3 +8,8 @@ VITE_MAPTILER_KEY=your_maptiler_key_here
 
 # Google Maps API Key
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Dify Workflow
+VITE_DIFY_API_KEY=your_dify_api_key_here
+VITE_DIFY_ENDPOINT=https://api.dify.ai/v1/workflows/run
+VITE_GENERATION_TIMEOUT=300000
