--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -39,15 +39,20 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tanstack/react-query": "^5.83.0",
+    "@types/three": "^0.182.0",
     "@vis.gl/react-google-maps": "^1.7.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.28.1",
     "input-otp": "^1.4.2",
     "lovable-tagger": "^1.1.11",
     "lucide-react": "^0.462.0",
@@ -62,6 +67,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "vaul": "^0.9.9",
     "vite-plugin-pwa": "^1.1.0",
     "zod": "^3.25.76"
