--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -9,7 +9,14 @@ VITE_MAPTILER_KEY=your_maptiler_key_here
 # Google Maps API Key
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
+# Gemini API Key (for direct generation)
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+VITE_GEMINI_MODEL=gemini-2.0-flash
+
 # Dify Workflow
 VITE_DIFY_API_KEY=your_dify_api_key_here
 VITE_DIFY_ENDPOINT=https://api.dify.ai/v1/workflows/run
 VITE_GENERATION_TIMEOUT=300000
+
+# Generation Mode: dify | gemini | auto
+VITE_GENERATION_MODE=auto
